--- a/requirements.txt
+++ b/requirements.txt
@@ -3,5 +3,7 @@ Django==3.2.15
 django-cors-headers==3.13.0
 django-rest-framework==0.1.0
 djangorestframework==3.13.1
+gunicorn==20.1.0
+psycopg2==2.9.3
 pytz==2022.2.1
 sqlparse==0.4.2
